Collision Callbacks Don't Work if Set Directly #40912

Closed
opened 2014-07-01 22:30:21 +02:00 by solarlune · 9 comments

System Information
Windows 7 64-bit, AMD Radeon 7700 Series

Blender Version
Broken: 6/30/2014, hash: ea3c2eb

A collision callback function added to the KX_GameObject's collisionCallbacks list will only work if appended; if the list is set directly (i.e. object.collisionCallbacks = [checking_function]), it won't work.

Exact steps for others to reproduce the error

  1. Just press P to play the game and see that the collision callback isn't being run.

  2. Uncomment the appending of the callback and comment out the "list set" line to have the collision callback be added "correctly" to the callbacks list. The callback will then be run correctly.

CollisionCallbackError.blend

**System Information** Windows 7 64-bit, AMD Radeon 7700 Series **Blender Version** Broken: 6/30/2014, hash: ea3c2eb A collision callback function added to the KX_GameObject's collisionCallbacks list will only work if appended; if the list is set directly (i.e. object.collisionCallbacks = [checking_function]), it won't work. **Exact steps for others to reproduce the error** 1. Just press P to play the game and see that the collision callback isn't being run. 2. Uncomment the appending of the callback and comment out the "list set" line to have the collision callback be added "correctly" to the callbacks list. The callback will then be run correctly. [CollisionCallbackError.blend](https://archive.blender.org/developer/F96234/CollisionCallbackError.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @solarlune

Added subscriber: @solarlune

Added subscriber: @AngusHollands-4

Added subscriber: @AngusHollands-4

The callback is designed to register for collisions if the value is read. (obj.collisionCallbacks.append first reads the value then writes). Directly setting circumvents the registration call.

To fix, duplicate the registration code from the get method into the set method.

The callback is designed to register for collisions if the value is read. (obj.collisionCallbacks.append first reads the value then writes). Directly setting circumvents the registration call. To fix, duplicate the registration code from the get method into the set method.
Author

Thanks, but that still sounds like a bug. Couldn't that be easily done in the source to force the callbacks to work either way?

Thanks, but that still sounds like a bug. Couldn't that be easily done in the source to force the callbacks to work either way?

To fix, duplicate the registration code from the get method into the set method.
I suggested just that above, it is a bug, and hopefully fixed soon

To fix, duplicate the registration code from the get method into the set method. I suggested just that above, it is a bug, and hopefully fixed soon

This issue was referenced by 49aff416f8

This issue was referenced by 49aff416f8db98d858cb4c822ad4425377fc7acd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 49aff416f8.

Closed by commit 49aff416f8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40912
No description provided.