Fix T40912: Collision Callbacks Don't Work if Set Directly